Fixed an issue where year titles would jump around on page load

--- a/src/components/Home/ImageRow/ImageRow.css
+++ b/src/components/Home/ImageRow/ImageRow.css
@@ -1,6 +1,6 @@
 .RowImage {
   margin: 0px 2vw;
-  margin-bottom: 2vh;
+  margin-bottom: 8.5px;
   width: 200px;
   box-shadow: 5px 5px 12px #888;
   -webkit-transition: transform 0.1s ease-in-out;
@@ -22,7 +22,6 @@
 }
 
 .row {
-  min-height: 245px;
   display: flex;
   flex-direction: row;
   align-items: center;
